[DDW-565] Make sure the addresses list is always visible

--- a/source/renderer/app/components/wallet/receive/WalletReceive.scss
+++ b/source/renderer/app/components/wallet/receive/WalletReceive.scss
@@ -3,7 +3,7 @@
 
 .component {
   flex: 1;
-  min-height: 442px;
+  min-height: 509px;
   overflow-x: hidden;
   overflow-y: overlay;
   padding: 20px;
